--- a/index.html
+++ b/index.html
@@ -2,39 +2,53 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
+  <!-- viewport-fit=cover needed for iPhone safe-area env() -->
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <title>Budgetr</title>
 
+  <!-- PWA / iOS meta -->
   <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#0F1724" />
+  <meta name="theme-color" content="#0b0f16" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
+  <!-- black-translucent lets your app content show under the status bar in standalone -->
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
   <link rel="stylesheet" href="styles.css">
-  <!-- Dexie for IndexedDB -->
   <script src="https://unpkg.com/dexie@3.2.2/dist/dexie.min.js"></script>
 </head>
 <body>
   <div id="app" class="app">
-    <!-- Main content -->
     <main id="mainView" class="main">
-      <!-- Dashboard view -->
+      <!-- Dashboard View -->
       <section id="view-dashboard" class="view active">
         <header class="topbar">
-          <div class="title">Dashboard</div>
-          <button id="openSettings" class="icon-btn" title="Settings">⚙️</button>
+          <div class="left">
+            <div class="title">Dashboard</div>
+          </div>
+          <div class="right">
+            <!-- frequency select on dashboard (synchronized) -->
+            <select id="freqDashboard" class="freq-select" aria-label="Frequency">
+              <option value="month">Month</option>
+              <option value="year">Year</option>
+              <option value="biweekly">Every Other Week</option>
+              <option value="weekly">Weekly</option>
+            </select>
+            <button id="openSettings" class="icon-btn" title="Settings">⚙️</button>
+          </div>
         </header>
 
         <div class="content">
           <div class="card total-card">
-            <div class="card-label">Total Spent</div>
-            <div class="total-amount" id="totalSpent">$0.00</div>
+            <div>
+              <div class="card-label">Total Spent</div>
+              <div class="total-amount" id="totalSpent">$0.00</div>
+            </div>
             <div class="trend">↘︎</div>
           </div>
 
           <div class="mini-cards">
             <div class="mini card">
-              <div class="mini-label">Monthly Income</div>
+              <div class="mini-label">Net Income</div>
               <div class="mini-amount green" id="netIncome">$0.00</div>
             </div>
             <div class="mini card">
@@ -49,101 +63,59 @@
             </div>
             <div id="categoryList" class="category-list"></div>
           </div>
-
-          <div class="card recent-card">
-            <div class="card-header">
-              <div class="h">Recent Expenses</div>
-            </div>
-            <ul id="recentList" class="recent-list"></ul>
-          </div>
         </div>
       </section>
 
-      <!-- Expenditures view -->
+      <!-- Expenditures View -->
       <section id="view-expenditures" class="view">
         <header class="topbar">
-          <div class="title">Expenditures</div>
-          <input id="searchInput" class="search" placeholder="Search description or category…" />
+          <div class="left">
+            <div class="title">Expenditures</div>
+          </div>
+          <div class="right">
+            <!-- shared freq select (synchronized) -->
+            <select id="freqExpend" class="freq-select" aria-label="Frequency">
+              <option value="month">Month</option>
+              <option value="year">Year</option>
+              <option value="biweekly">Every Other Week</option>
+              <option value="weekly">Weekly</option>
+            </select>
+            <button id="showAddBtn" class="btn small">Add</button>
+          </div>
         </header>
 
         <div class="content">
+          <!-- expenditures table -->
           <div class="card list-card">
-            <ul id="expList" class="exp-list"></ul>
+            <div class="table-header">
+              <div class="th">Expenditure</div>
+              <div class="th">Cost</div>
+              <div class="th">Priority</div>
+              <div class="th">Category</div>
+            </div>
+            <div id="expList" class="exp-list"></div>
+          </div>
+
+          <!-- Add form is its own card/screen inside expenditures -->
+          <div id="addScreen" class="card add-screen hidden">
+            <h3>Add Expense</h3>
+            <form id="addForm" class="form">
+              <input id="fDesc" placeholder="Description (e.g., Mortgage)" required />
+              <div class="row">
+                <input id="fAmount" type="number" step="0.01" placeholder="Amount (monthly base)" required />
+                <input id="fDate" type="date" />
+              </div>
+              <div class="row">
+                <input id="fCategory" placeholder="Category (e.g., Housing)" />
+                <input id="fPriority" type="number" min="1" placeholder="Priority (1 = highest)" />
+              </div>
+              <div class="actions">
+                <button type="button" id="cancelAdd" class="btn ghost">Cancel</button>
+                <button type="submit" class="btn primary">Save</button>
+              </div>
+            </form>
           </div>
         </div>
       </section>
 
-      <!-- Goals view -->
-      <section id="view-goals" class="view">
-        <header class="topbar">
-          <div class="title">Goals</div>
-        </header>
-
-        <div class="content">
-          <div class="card">
-            <h3>Savings Planner</h3>
-            <div class="row">
-              <input id="goalAmount" type="number" placeholder="Goal amount" />
-              <input id="goalDate" type="date" />
-            </div>
-            <div class="row gap">
-              <label><input id="useAvg" type="checkbox" checked /> Use avg monthly expenses</label>
-            </div>
-            <button id="calcGoal" class="btn">Calculate</button>
-            <div id="goalResult" class="goal-result"></div>
-          </div>
-        </div>
-      </section>
-    </main>
-
-    <!-- Floating Add button -->
-    <button id="addFab" class="fab">＋</button>
-
-    <!-- Bottom nav -->
-    <nav class="bottom-nav">
-      <button class="nav-btn active" data-view="dashboard" id="navDashboard">
-        <svg viewBox="0 0 24 24" class="icon"><path d="M3 13h8V3H3v10zM3 21h8v-6H3v6zM13 21h8V11h-8v10zM13 3v6h8V3h-8z" /></svg>
-        <span>Dashboard</span>
-      </button>
-
-      <button class="nav-btn" data-view="expenditures" id="navExpend">
-        <svg viewBox="0 0 24 24" class="icon"><path d="M3 6h18v2H3zM3 11h18v2H3zM3 16h18v2H3z"/></svg>
-        <span>Expenditures</span>
-      </button>
-
-      <div class="nav-gap"></div>
-
-      <button class="nav-btn" data-view="goals" id="navGoals">
-        <svg viewBox="0 0 24 24" class="icon"><path d="M12 2l3 7h7l-5.6 4 2 7L12 16l-6.4 4 2-7L2 9h7z"/></svg>
-        <span>Goals</span>
-      </button>
-    </nav>
-
-    <!-- Add overlay -->
-    <div id="addOverlay" class="overlay hidden" aria-hidden="true">
-      <div class="overlay-card">
-        <h3>Add Expense</h3>
-        <form id="addForm" class="form">
-          <input id="fDesc" placeholder="Description (e.g., Mortgage)" required />
-          <div class="row">
-            <input id="fAmount" type="number" step="0.01" placeholder="Amount" required />
-            <input id="fDate" type="date" />
-          </div>
-          <div class="row">
-            <input id="fCategory" placeholder="Category (e.g., Housing)" />
-            <input id="fPriority" type="number" min="1" placeholder="Priority (1 = highest)" />
-          </div>
-          <div class="actions">
-            <button type="button" id="cancelAdd" class="btn ghost">Cancel</button>
-            <button type="submit" class="btn primary">Save</button>
-          </div>
-        </form>
-      </div>
-    </div>
-
-  </div>
-
-  <script src="app.js"></script>
-</body>
-</html>
-
+      <!-- Goals
