--- a/index.html
+++ b/index.html
@@ -2,153 +2,69 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <!-- viewport-fit=cover needed for iPhone safe-area env() -->
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
-  <title>Budgetr</title>
+  <title>Budgetr — Dashboard</title>
 
-  <!-- PWA / iOS meta -->
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#0b0f16" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <!-- black-translucent lets your app content show under the status bar in standalone -->
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
   <link rel="stylesheet" href="styles.css">
   <script src="https://unpkg.com/dexie@3.2.2/dist/dexie.min.js"></script>
+  <script src="common.js" defer></script>
+  <script src="dashboard.js" defer></script>
 </head>
 <body>
-  <div id="app" class="app">
-    <main id="mainView" class="main">
-      <!-- Dashboard View -->
-      <section id="view-dashboard" class="view active">
-        <header class="topbar">
-          <div class="left">
-            <div class="title">Dashboard</div>
-          </div>
-          <div class="right">
-            <!-- frequency select on dashboard (synchronized) -->
-            <select id="freqDashboard" class="freq-select" aria-label="Frequency">
-              <option value="month">Month</option>
-              <option value="year">Year</option>
-              <option value="biweekly">Every Other Week</option>
-              <option value="weekly">Weekly</option>
-            </select>
-            <button id="openSettings" class="icon-btn" title="Settings">⚙️</button>
-          </div>
-        </header>
+  <div class="app">
+    <main class="main">
+      <header class="topbar">
+        <div class="title">Dashboard</div>
+        <div class="right">
+          <select id="freqDashboard" class="freq-select" aria-label="Frequency">
+            <option value="month">Month</option>
+            <option value="year">Year</option>
+            <option value="biweekly">Every Other Week</option>
+            <option value="weekly">Weekly</option>
+          </select>
+          <button id="openSettings" class="icon-btn">⚙️</button>
+        </div>
+      </header>
 
-        <div class="content">
-          <div class="card total-card">
-            <div>
-              <div class="card-label">Total Spent</div>
-              <div class="total-amount" id="totalSpent">$0.00</div>
-            </div>
-            <div class="trend">↘︎</div>
-          </div>
-
-          <div class="mini-cards">
-            <div class="mini card">
-              <div class="mini-label">Net Income</div>
-              <div class="mini-amount green" id="netIncome">$0.00</div>
-            </div>
-            <div class="mini card">
-              <div class="mini-label">Remaining</div>
-              <div class="mini-amount green" id="remaining">$0.00</div>
-            </div>
-          </div>
-
-          <div class="card breakdown-card">
-            <div class="card-header">
-              <div class="h">Spending by Category</div>
-            </div>
-            <div id="categoryList" class="category-list"></div>
+      <div class="content">
+        <div class="card total-card">
+          <div>
+            <div class="card-label">Total Spent</div>
+            <div id="totalSpent" class="total-amount">$0.00</div>
           </div>
         </div>
-      </section>
 
-      <!-- Expenditures View -->
-      <section id="view-expenditures" class="view">
-        <header class="topbar">
-          <div class="left">
-            <div class="title">Expenditures</div>
+        <div class="mini-cards">
+          <div class="mini card">
+            <div class="mini-label">Net Income</div>
+            <div id="netIncome" class="mini-amount green">$0.00</div>
           </div>
-          <div class="right">
-            <!-- shared freq select (synchronized) -->
-            <select id="freqExpend" class="freq-select" aria-label="Frequency">
-              <option value="month">Month</option>
-              <option value="year">Year</option>
-              <option value="biweekly">Every Other Week</option>
-              <option value="weekly">Weekly</option>
-            </select>
-            <button id="showAddBtn" class="btn small">Add</button>
-          </div>
-        </header>
-
-        <div class="content">
-          <!-- expenditures table -->
-          <div class="card list-card">
-            <div class="table-header">
-              <div class="th">Expenditure</div>
-              <div class="th">Cost</div>
-              <div class="th">Priority</div>
-              <div class="th">Category</div>
-            </div>
-            <div id="expList" class="exp-list"></div>
-          </div>
-
-          <!-- Add form is its own card/screen inside expenditures -->
-          <div id="addScreen" class="card add-screen hidden">
-            <h3>Add Expense</h3>
-            <form id="addForm" class="form">
-              <input id="fDesc" placeholder="Description (e.g., Mortgage)" required />
-              <div class="row">
-                <input id="fAmount" type="number" step="0.01" placeholder="Amount (monthly base)" required />
-                <input id="fDate" type="date" />
-              </div>
-              <div class="row">
-                <input id="fCategory" placeholder="Category (e.g., Housing)" />
-                <input id="fPriority" type="number" min="1" placeholder="Priority (1 = highest)" />
-              </div>
-              <div class="actions">
-                <button type="button" id="cancelAdd" class="btn ghost">Cancel</button>
-                <button type="submit" class="btn primary">Save</button>
-              </div>
-            </form>
+          <div class="mini card">
+            <div class="mini-label">Remaining</div>
+            <div id="remaining" class="mini-amount green">$0.00</div>
           </div>
         </div>
-      </section>
 
-      <!-- Goals View -->
-      <section id="view-goals" class="view">
-        <header class="topbar">
-          <div class="title">Goals</div>
-        </header>
-
-        <div class="content">
-          <div class="card">
-            <h3>Savings Planner</h3>
-            <div class="row">
-              <input id="goalAmount" type="number" placeholder="Goal amount" />
-              <input id="goalDate" type="date" />
-            </div>
-            <div class="row gap">
-              <label><input id="useAvg" type="checkbox" checked /> Use avg monthly expenses</label>
-            </div>
-            <button id="calcGoal" class="btn">Calculate</button>
-            <div id="goalResult" class="goal-result"></div>
+        <div class="card breakdown-card">
+          <div class="card-header">
+            <div class="h">Spending by Category</div>
           </div>
+          <div id="categoryList" class="category-list"></div>
         </div>
-      </section>
+      </div>
     </main>
 
-    <!-- Bottom nav (keeps safe-area) -->
+    <!-- bottom nav -->
     <nav class="bottom-nav">
-      <button class="nav-btn active" data-view="dashboard" id="navDashboard">Dashboard</button>
-      <button class="nav-btn" data-view="expenditures" id="navExpend">Expenditures</button>
-      <button class="nav-btn" data-view="goals" id="navGoals">Goals</button>
+      <a class="nav-btn" href="index.html" id="navDashboard"><span class="nav-icon">🏠</span><span>Dashboard</span></a>
+      <a class="nav-btn" href="expenditures.html" id="navExpend"><span class="nav-icon">📋</span><span>Expenditures</span></a>
+      <a class="nav-btn" href="goals.html" id="navGoals"><span class="nav-icon">🎯</span><span>Goals</span></a>
     </nav>
   </div>
-
-  <script src="app.js"></script>
 </body>
 </html>
