--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <script src="https://unpkg.com/dexie@3.2.2/dist/dexie.min.js"></script>
   <script src="common.js" defer></script>
   <script src="dashboard.js" defer></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
 </head>
 <body>
   <div class="app">
@@ -68,3 +70,4 @@
   </div>
 </body>
 </html>
+
