--- a/goals.html
+++ b/goals.html
@@ -14,6 +14,8 @@
   <script src="https://unpkg.com/dexie@3.2.2/dist/dexie.min.js"></script>
   <script src="common.js" defer></script>
   <script src="goals.js" defer></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
 </head>
 <body>
   <div class="app">
