Fix HTML formatting and remove duplicates

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <script src="dashboard.js" defer></script>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
+  <script src="common.js" defer></script>
 </head>
 <body>
   <div class="app">
@@ -70,4 +71,5 @@
   </div>
 </body>
 </html>
+
 
