--- a/expenditures.html
+++ b/expenditures.html
@@ -16,6 +16,7 @@
   <script src="expenditures.js" defer></script>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
+  <script src="common.js" defer></script>
 </head>
 <body>
   <div class="app">
