--- a/index.html
+++ b/index.html
@@ -16,18 +16,20 @@
   <script>
     (async function(){
       try {
-        // getCurrentUser and initSupabaseSync are defined in common.js
-        const user = await getCurrentUser();
-        if(!user) {
-          // not signed in: go to login page
+        // Wait for Supabase session to be restored
+        const { data: { session } } = await supabaseClient.auth.getSession();
+
+        if(!session || !session.user) {
+          // no valid session: redirect to login
           location.href = 'login.html';
           return;
         }
-        // initialize sync (fetch server rows and subscribe realtime)
+    
+        // initialize sync
         await initSupabaseSync();
+    
       } catch (err) {
         console.error('Auth/init check failed', err);
-        // redirect to login to allow re-auth
         location.href = 'login.html';
       }
     })();
@@ -99,5 +101,6 @@
   
 </body>
 </html>
+
 
 
