--- a/expenditures.html
+++ b/expenditures.html
@@ -61,7 +61,7 @@
       <div class="content">
         <div class="card list-card">
           <div class="table-header">
-            <div class="th">Expenditure</div>
+            <div class="th">Name</div>
             <div class="th">Cost</div>
             <div class="th">Priority</div>
             <div class="th">Category</div>
