--- a/expenditures.html
+++ b/expenditures.html
@@ -54,7 +54,7 @@
             <option value="biweekly">Every Other Week</option>
             <option value="weekly">Weekly</option>
           </select>
-          <button id="showAddBtn" class="btn small">+</button>
+          <button id="showAddBtn" class="btn medium">+</button>
         </div>
       </header>
 
