--- a/expenditures.html
+++ b/expenditures.html
@@ -7,7 +7,7 @@
 
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#0b0f16" />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meeta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
   <link rel="stylesheet" href="styles.css">
