--- a/expenditures.html
+++ b/expenditures.html
@@ -7,7 +7,7 @@
 
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#0b0f16" />
-  <meeta name="mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
   <link rel="stylesheet" href="styles.css">
@@ -54,8 +54,8 @@
             <option value="biweekly">Every Other Week</option>
             <option value="weekly">Weekly</option>
           </select>
+          <button id="showAddBtn" class="btn medium">+</button>
         </div>
-        <button id="showAddBtn" class="btn medium">+</button>
       </header>
 
       <div class="content">
