--- a/expenditures.html
+++ b/expenditures.html
@@ -75,7 +75,7 @@
             <input id="fDesc" placeholder="Description (e.g., Mortgage)" required />
             <div class="row">
               <input id="fAmount" type="number" step="0.01" placeholder="Amount (monthly base)" required />
-              <input id="fDate" type="date" />
+              <!-- date removed -->
             </div>
             <div class="row">
               <input id="fCategory" placeholder="Category (e.g., Housing)" />
@@ -83,7 +83,7 @@
             </div>
             <div class="actions">
               <button type="button" id="cancelAdd" class="btn ghost">Cancel</button>
-              <button type="submit" class="btn primary">Save</button>
+              <button type="submit" id="saveAddBtn" class="btn primary">Save</button>
             </div>
           </form>
         </div>
