--- a/expenditures.html
+++ b/expenditures.html
@@ -71,10 +71,10 @@
 
         <div id="addScreen" class="card add-screen hidden">
           <h3>Add Expense</h3>
-          <form id="addForm" class="form">
+          <form id="addForm" class="form" autocomplete="off" novalidate>
             <input id="fDesc" placeholder="Description (e.g., Mortgage)" required />
             <div class="row">
-              <input id="fAmount" type="number" step="0.01" placeholder="Amount (monthly base)" required />
+              <input id="fAmount" type="text" inputmode="decimal" placeholder="Amount (monthly base)" required />
               <!-- date removed -->
             </div>
             <div class="row">
@@ -83,7 +83,7 @@
             </div>
             <div class="actions">
               <button type="button" id="cancelAdd" class="btn ghost">Cancel</button>
-              <button type="submit" id="saveAddBtn" class="btn primary">Save</button>
+              <button type="submit" class="btn primary">Save</button>
             </div>
           </form>
         </div>
