--- a/login.html
+++ b/login.html
@@ -36,6 +36,8 @@
         try {
           // call the wrapper from common.js (must be defined there as window.signIn)
           await signIn(email, password);
+          // initialize sync now that session is set
+          await initSupabaseSync();
           // go to dashboard
           window.location.href = 'index.html';
         } catch (err) {
