--- a/goals.html
+++ b/goals.html
@@ -63,8 +63,36 @@
 
     <!-- bottom nav -->
     <nav class="bottom-nav">
-      <a class="nav-btn" href="index.html" id="navDashboard"><span class="nav-icon">🏠</span><span>Dashboard</span></a>
-      <a class="nav-btn" href="expenditures.html" id="navExpend"><span class="nav-icon">📋</span><span>Expenditures</span></a>
+      <a class="nav-btn" href="index.html" id="navDashboard" aria-label="Dashboard">
+        <div class="nav-icon-wrapper">
+          <!-- Home icon (SVG uses currentColor) -->
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+            <path d="M3 11.5L12 4l9 7.5V20a1 1 0 0 1-1 1h-5v-6H9v6H4a1 1 0 0 1-1-1V11.5z" fill="currentColor"/>
+          </svg>
+        </div>
+        <div class="nav-label">Home</div>
+      </a>
+    
+      <a class="nav-btn" href="expenditures.html" id="navExpend" aria-label="Expenditures">
+        <div class="nav-icon-wrapper">
+          <!-- List / expenditures icon -->
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+            <path d="M4 6h16v2H4zM4 11h16v2H4zM4 16h10v2H4z" fill="currentColor"/>
+          </svg>
+        </div>
+        <div class="nav-label">Spend</div>
+      </a>
+    
+      <a class="nav-btn" href="goals.html" id="navGoals" aria-label="Goals">
+        <div class="nav-icon-wrapper">
+          <!-- Target / goals icon -->
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+            <path d="M12 8a4 4 0 1 0 0 8 4 4 0 0 0 0-8z" stroke="currentColor" stroke-width="1.4" fill="none"/>
+            <path d="M21 12a9 9 0 1 0-9 9" stroke="currentColor" stroke-width="1.4" fill="none"/>
+          </svg>
+        </div>
+        <div class="nav-label">Goals</div>
+      </a>
       <a class="nav-btn active" href="goals.html" id="navGoals"><span class="nav-icon">🎯</span><span>Goals</span></a>
     </nav>
   </div>
