--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </div>
         <div class="nav-label">Goals</div>
       </a>
-      <a class="nav-btn active" href="index.html" id="navDashboard"><span class="nav-icon">🏠</span><span>Dashboard</span></a>
+      <a class="nav-btn active" href="index.html" id="navDashboard"></a>
     </nav>
   </div>
 
@@ -129,6 +129,7 @@
   
 </body>
 </html>
+
 
 
 
