--- a/goals.html
+++ b/goals.html
@@ -93,7 +93,7 @@
         </div>
         <div class="nav-label">Goals</div>
       </a>
-      <a class="nav-btn active" href="goals.html" id="navGoals"><span class="nav-icon">🎯</span><span>Goals</span></a>
+      <a class="nav-btn active" href="goals.html" id="navGoals"></a>
     </nav>
   </div>
 
