--- a/expenditures.html
+++ b/expenditures.html
@@ -101,7 +101,7 @@
         </div>
         <div class="nav-label">Goals</div>
       </a>
-      <a class="nav-btn active" href="expenditures.html" id="navExpend"><span class="nav-icon">📋</span><span>Expenditures</span></a>
+      <a class="nav-btn active" href="expenditures.html" id="navExpend"></a>
     </nav>
   </div>
 
