--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <path d="M4 6h16v2H4zM4 11h16v2H4zM4 16h10v2H4z" fill="currentColor"/>
           </svg>
         </div>
-        <div class="nav-label">Spend</div>
+        <div class="nav-label">Expenditures</div>
       </a>
     
       <a class="nav-btn" href="goals.html" id="navGoals" aria-label="Goals">
@@ -128,6 +128,7 @@
   
 </body>
 </html>
+
 
 
 
