--- a/index.html
+++ b/index.html
@@ -50,7 +50,24 @@
         <div class="title">Dashboard</div>
 
         <div class="right">
-          <select id="freqDashboard" class="freq-select" aria-label="Frequency">
+          <!-- view icon (replaces visible select). keeps the hidden select for compatibility -->
+          <button id="viewToggle" class="icon-btn view-btn" aria-haspopup="true" aria-expanded="false" title="Change view">
+            <!-- simple "view/list" icon -->
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+              <path d="M3 5h18v2H3zM3 11h18v2H3zM3 17h18v2H3z" fill="currentColor"/>
+            </svg>
+          </button>
+          
+          <!-- small popup menu that appears when the icon is tapped -->
+          <div id="viewMenu" class="view-menu" role="menu" aria-hidden="true">
+            <button class="view-item" data-value="month" role="menuitem">Month</button>
+            <button class="view-item" data-value="year" role="menuitem">Year</button>
+            <button class="view-item" data-value="biweekly" role="menuitem">Every Other Week</button>
+            <button class="view-item" data-value="weekly" role="menuitem">Weekly</button>
+          </div>
+          
+          <!-- keep a hidden select (so existing code referencing #freqDashboard keeps working) -->
+          <select id="freqDashboard" hidden aria-hidden="true">
             <option value="month">Month</option>
             <option value="year">Year</option>
             <option value="biweekly">Every Other Week</option>
@@ -133,3 +150,4 @@
   <script src="dashboard.js" defer></script>
 </body>
 </html>
+
