--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Budgetr — Dashboard</title>
 
   <!-- Optional: Poppins font (place before your stylesheet so CSS can use it) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
   <!-- your app styles -->
@@ -150,4 +151,5 @@
   <script src="dashboard.js" defer></script>
 </body>
 </html>
+
 
