--- a/expenditures.html
+++ b/expenditures.html
@@ -55,7 +55,7 @@
           <option value="month">Month</option>
           <option value="year">Year</option>
           <option value="biweekly">Every Other Week</option>
-          <option value="weekly">Weekly</option>
+          <option value="weekly">Week</option>
         </select>
       
         <!-- popup menu for the view toggle (positioned by your .view-menu CSS) -->
@@ -63,7 +63,7 @@
           <button class="view-item" data-value="month" role="menuitem">Month</button>
           <button class="view-item" data-value="year" role="menuitem">Year</button>
           <button class="view-item" data-value="biweekly" role="menuitem">Every Other Week</button>
-          <button class="view-item" data-value="weekly" role="menuitem">Weekly</button>
+          <button class="view-item" data-value="weekly" role="menuitem">Week</button>
         </div>
       </header>
 
