--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <option value="month">Month</option>
           <option value="year">Year</option>
           <option value="biweekly">Every Other Week</option>
-          <option value="weekly">Weekly</option>
+          <option value="weekly">Week</option>
         </select>
       
         <!-- popup menu for small-screen view selector -->
@@ -73,7 +73,7 @@
           <button class="view-item" data-value="month" role="menuitem">Month</button>
           <button class="view-item" data-value="year" role="menuitem">Year</button>
           <button class="view-item" data-value="biweekly" role="menuitem">Every Other Week</button>
-          <button class="view-item" data-value="weekly" role="menuitem">Weekly</button>
+          <button class="view-item" data-value="weekly" role="menuitem">Week</button>
         </div>
       
         <!-- CENTER: title -->
@@ -157,6 +157,7 @@
   <script src="dashboard.js" defer></script>
 </body>
 </html>
+
 
 
 
