--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <select id="freqDashboard" class="freq-select visually-hidden" aria-hidden="true" style="display:none">
           <option value="month">Month</option>
           <option value="year">Year</option>
-          <option value="biweekly">Every Other Week</option>
+          <option value="biweekly">Bi-Week</option>
           <option value="weekly">Week</option>
         </select>
       
@@ -72,7 +72,7 @@
         <div id="viewMenu" class="view-menu" role="menu" aria-hidden="true">
           <button class="view-item" data-value="month" role="menuitem">Month</button>
           <button class="view-item" data-value="year" role="menuitem">Year</button>
-          <button class="view-item" data-value="biweekly" role="menuitem">Every Other Week</button>
+          <button class="view-item" data-value="biweekly" role="menuitem">Bi-Week</button>
           <button class="view-item" data-value="weekly" role="menuitem">Week</button>
         </div>
       
@@ -157,6 +157,7 @@
   <script src="dashboard.js" defer></script>
 </body>
 </html>
+
 
 
 
